Add new 4 modules, 1 for each task

--- a/marathon.vbproj
+++ b/marathon.vbproj
@@ -6,4 +6,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DefineDebug>false</DefineDebug>
+  </PropertyGroup>
 </Project>
